# ProgrammingInAI

./: .gitignore  README.md
final/python/: imagenet.py  mnist.py
final/python/test/: test_loss.py
final/src/: CMakeLists.txt  global_curand_generator.cuh  main.cu  ndarray_module.cu  pybind.cu  tensor.cpp  tensor.cu  tensor.h  tensor_module.cu  tensornn.cuh  tensornn.h
final/src/autodiff/: autodiff.cu  autodiff.h  op.cpp  op.h  operators.cu  operators.h  value.cpp  value.h
final/src/ndarray/: device_space.hpp  ndarray.cu  ndarray.h  ndarray_kernel.cu  ndarray_kernel.cuh  nn.cuh
final/src/utils/: global_cublas_handle.cu  global_cublas_handle.cuh
hw1/: CMakeLists.txt  README.md  cifar.py  main.cu  main.py  net_def.py  tensor.cu  tensor.h  train.py
hw2/: CMakeLists.txt  README.md  global_curand_generator.cuh  main.cu  tensor.cu  tensor.h  tensor_kernel.h  tensor_module.cu  tensornn.cuh
hw2/test/: test_conv2d.py  test_fc.py  test_max_pooling.py
hw3/: README.md  mnist.py
hw3/src/: CMakeLists.txt  README.md  device_space.h  tensor.cu  tensor.h  tensor_module.cu
hw3/test/: test_conv2d.py  test_loss.py  test_max_pooling.py  test_relu.py  test_sigmoid.py  test_softmax.py
hw4/: README.md  __init__.py  device.py  task1_operators.py  task2_autodiff.py  tensor.py  test_task1_backward.py  test_task1_forward.py  test_task2_auto_diff.py  test_task2_topo_sort.py  utils.py
hw5/: README.md  __init__.py  basic_operator.py  device.py  task0_autodiff.py  task0_operators.py  task1_optimizer.py  tensor.py
playground/: CMakeLists.txt  thrust.cu
